--- a/My-Micro-Wallet/src/main/resources/application.properties
+++ b/My-Micro-Wallet/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+#http://localhost:8081/SpringMVC/servlet/sayHello?myName=Walid
+#Server configuration
+#server.servlet.context-path=/SpringMVC
+#spring.mvc.servlet.path=/servlet#
+server.port=8081
+
 ### DATABASE ###
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
  spring.datasource.url=jdbc:mysql://localhost:3306/micro_wallet_db?useUnicode=true&useJD
@@ -6,5 +12,18 @@ BCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
  spring.datasource.password=
 ### JPA / HIBERNATE ###
  spring.jpa.show-sql=true
- spring.jpa.hibernate.ddl-auto=update
- spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+ #spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto=update
+ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+hibernate.dialect.storage_engine=innodb
+spring.jpa.database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+
+#Web configuration
+spring.mvc.view.prefix=/views/
+spring.mvc.view.suffix=.jsp
+
+#logging configuration
+logging.file=C:\logs\springboot.log
+logging.level.root=INFO
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %logger{36} - %msg%n
