--- a/My-Micro-Wallet/src/main/resources/application.properties
+++ b/My-Micro-Wallet/src/main/resources/application.properties
@@ -1,18 +1,17 @@
 #http://localhost:8081/SpringMVC/servlet/sayHello?myName=Walid
-#Server configuration
-#server.servlet.context-path=/SpringMVC
-#spring.mvc.servlet.path=/servlet#
+Server configuration
+server.servlet.context-path=/SpringMVC
+spring.mvc.servlet.path=/servlet
 server.port=8081
 
 ### DATABASE ###
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
- spring.datasource.url=jdbc:mysql://localhost:3306/micro_wallet_db?useUnicode=true&useJD
-BCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+ spring.datasource.url=jdbc:mysql://localhost:3306/micro_wallet_db?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
  spring.datasource.username=root
  spring.datasource.password=
 ### JPA / HIBERNATE ###
  spring.jpa.show-sql=true
- #spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 # spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
  spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
